--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "pinia": "^3.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
