--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-at": "^3.0.0-alpha.2",
+    "vue-router": "^4.5.0",
+    "vue-tribute": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
