--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^3.5.13",
     "vue-at": "^3.0.0-alpha.2",
     "vue-router": "^4.5.0",
-    "vue-tribute": "^2.0.0"
+    "vue-tribute": "^2.0.0",
+    "vue3-markdown": "^1.1.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
