--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.9",
